# uprelay

./: .env  .gitignore  Cargo.toml  docker-compose.yaml
migrations/: 20230727190741_create_relay_table.up.sql  20230728202818_add_seen_bool_to_relay.down.sql  20230728202818_add_seen_bool_to_relay.up.sql
src/: app.rs  db.rs  lib.rs  main.rs  models.rs  nostr.rs
