[package]
authors = ["w3irdrobot <rob@w3ird.tech>"]
edition = "2021"
name = "uprelay"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.4", optional = true }
cached = { version = "0.44.0", optional = true }
cfg-if = "1"
console_error_panic_hook = "0.1"
console_log = "1"
dotenvy = { version = "0.15.7", optional = true }
futures = "0.3.28"
http = "0.2.8"
leptos = { version = "0.4", features = ["nightly"] }
leptos_axum = { version = "0.4", optional = true }
leptos_meta = { version = "0.4", features = ["nightly"] }
leptos_router = { version = "0.4", features = ["nightly"] }
log = "0.4"
nostr-sdk = { git = "https://github.com/w3irdrobot/nostr.git", rev = "3e73d712f05775895ca1abb5050f537220dcfa5d", optional = true }
reqwest = "0.11.18"
serde = "1.0.177"
serde_json = { version = "1.0.104", features = ["raw_value"] }
simple_logger = "4"
sqlx = { version = "0.7.1", features = [
  "runtime-tokio",
  "postgres",
  "time",
  "json",
], optional = true }
thiserror = "1.0.38"
time = { version = "0.3.23", features = ["serde", "macros"] }
tokio = { version = "1.25.0", optional = true }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.4", features = ["fs"], optional = true }
tracing = { version = "0.1.37", optional = true }
url = "2.4.0"
wasm-bindgen = "=0.2.87"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "dep:axum",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:tracing",
  "dep:sqlx",
  "dep:nostr-sdk",
  "dep:dotenvy",
  "dep:cached",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
codegen-units = 1
inherits = "release"
lto = true
opt-level = 'z'
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "uprelay"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
